<resources>

    <!-- Common -->
    <string name="app_name">F22 Tippspiel</string>

    <string name="versionName">3.0.2</string>
    <string name="changelog">
        - Anleitung geschrieben\n
        - Farbe für die Punkte beim Zusatztipp geänder\n
        -
    </string>
    <integer name="versionCode">1</integer>

    <string name="copyright">© 2016 Gozillabiene</string>
    <string name="adm_mail">webmaster@gozillabiene.net</string>
    <string name="www">https://tipp.gozillabiene.net</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="blank" />
    <string name="doppelpunkt">:</string>
    <string name="speichern">speichern</string>
    <string name="joker">Joker</string>
    <!-- /Common -->

    <!-- Navigation -->
    <string name="action_settings">Einstellungen</string>
    <string name="action_login">Login</string>
    <string name="nav_tipps">Tipps</string>
    <string name="nav_zusatz">Zusatztipp</string>
    <string name="nav_tabelle">Tabelle</string>
    <string name="nav_ubersicht">Übersicht</string>
    <string name="nav_admin">Admin</string>
    <string name="nav_support">Support</string>
    <string name="nav_anleitung">Anleitung</string>
    <string name="nav_hilfe">Hilfe</string>
    <!-- /Navigation -->

    <!-- Seite Start -->
    <string name="next_game">Nächstes Spiel beginnt am :\n</string>
    <string name="st_image">Bild</string>
    <string name="st_version">Version : </string>
    <!-- Seite Start -->

    <!-- Seite Hilfe -->
    <string name="hilfetext0" />
    <string name="hilfetext1">Bei Problemen,</string>
    <string name="hilfetext2">die Tipps an</string>
    <string name="hilfetext3">John</string>
    <string name="hilfetext4">per Email schicken</string>
    <string name="hilfetext5">john@1969@gmx.de</string>
    <string name="hilfetext6">oder an</string>
    <string name="hilfetext7">0173 / 2467194</string>
    <!-- /Seite Hilfe -->

    <!-- Seite Tipps -->
    <string name="spieltag">Spieltag</string>
    <string name="hinrunde">Hinrunde</string>
    <string name="ruckrunde">Rückrunde</string>
    <string-array name="spn_spieltag"><item>Spieltag wählen</item>
        <item>1. Spieltag (Hinrunde)</item><item>2. Spieltag (Hinrunde)</item><item>3. Spieltag (Hinrunde)</item>
        <item>4. Spieltag (Hinrunde)</item><item>5. Spieltag (Hinrunde)</item><item>6. Spieltag (Hinrunde)</item>
        <item>7. Spieltag (Hinrunde)</item><item>8. Spieltag (Hinrunde)</item><item>9. Spieltag (Hinrunde)</item>
        <item>10. Spieltag (Hinrunde)</item><item>11. Spieltag (Hinrunde)</item><item>12. Spieltag (Hinrunde)</item>
        <item>13. Spieltag (Hinrunde)</item><item>14. Spieltag (Hinrunde)</item><item>15. Spieltag (Hinrunde)</item>
        <item>16. Spieltag (Hinrunde)</item><item>17. Spieltag (Hinrunde)</item>
        <item>18. Spieltag (Rückrunde)</item><item>19. Spieltag (Rückrunde)</item><item>20. Spieltag (Rückrunde)</item>
        <item>21. Spieltag (Rückrunde)</item><item>22. Spieltag (Rückrunde)</item><item>23. Spieltag (Rückrunde)</item>
        <item>24. Spieltag (Rückrunde)</item><item>25. Spieltag (Rückrunde)</item><item>26. Spieltag (Rückrunde)</item>
        <item>27. Spieltag (Rückrunde)</item><item>28. Spieltag (Rückrunde)</item><item>29. Spieltag (Rückrunde)</item>
        <item>30. Spieltag (Rückrunde)</item><item>31. Spieltag (Rückrunde)</item><item>32. Spieltag (Rückrunde)</item>
        <item>33. Spieltag (Rückrunde)</item><item>34. Spieltag (Rückrunde)</item>
    </string-array>
    <!-- /Seite Tipps -->

    <!-- Seite Zusatz -->
    <string-array name="spn_zusatz">
        <item>Bitte wählen.</item>
        <item>Hinrunde</item>
        <item>Rückrunde</item>
    </string-array>
    <string name="label_z1">Platz 1</string>
    <string name="label_z2">Platz 2</string>
    <string name="label_z3">Platz 3</string>
    <string name="label_z4">Platz 4</string>
    <string name="label_z5">Platz 5</string>
    <string name="label_z6">Platz 6</string>
    <string name="label_z7">Platz 7</string>
    <string name="label_z8">Platz 8</string>
    <string name="label_z9">Platz 9</string>
    <string name="label_z10">Platz 10</string>
    <string name="label_z11">Platz 11</string>
    <string name="label_z12">Platz 12</string>
    <string name="label_z13">Platz 13</string>
    <string name="label_z14">Platz 14</string>
    <string name="label_z15">Platz 15</string>
    <string name="label_z16">Platz 16</string>
    <string name="label_z17">Platz 17</string>
    <string name="label_z18">Platz 18</string>
    <string name="btn_speichern">speichern</string>
    <!-- /Seite Zusatz -->

    <!-- Seite Anleitung -->
    <string name="anleitung_label1">Anleitung</string>
    <string name="anleitung_text1">\n
        Zum Anmelden oben rechts auf die 3 Punkte\n
        klicken und dort Login auswählen. Dort dann\n
        den Benutzernamen und das Passwort eingeben\n
        wie auch auf der Webseite. Wenn alles\n
        richtig ist, steht oben in der Stausleiste :\n
        Angemeldet als : .......\n\n
    </string>
    <string name="anleitung_label2">Menü Tipps</string>
    <string name="anleitung_text2">\n
        Unter Tipps können dann die Tipps für die\n
        Spiele eingegeben werden (Bis zum Anpfiff,\n
        dann wird die eingabe gesperrt). Pro\n
        Spieltag kann man einen Joker setzten,\n
        für den man bei einem richtigen Tipp\n
        einen Bonus von 2 Punkten erhält.\n\n
    </string>
    <string name="anleitung_label3">Menü Zusatztipp</string>
    <string name="anleitung_text3">\n
        Beim Zusatztipp kann man auf die Platzierungen\n
        zum ende der Hinrunde bzw. Rückrunde setzen\n
        (Bis zum beginn des 1. bzw des 18. Spieltages),\n
        dann werden die Eingaben gesperrt und man\n
        sieht alle Tipps von den Mitspielern.\n\n
    </string>
    <string name="anleitung_label4">Menü Tabelle</string>
    <string name="anleitung_text4">\n
        Hier sieht man den aktuellen\n
        Tabellenstand der Mannschaften.\n\n
    </string>
    <string name="anleitung_label5">Menü Übersicht</string>
    <string name="anleitung_text5">\n
        In der Übersicht kann man sehen, wie die\n
        anderen Mitspieler getippt haben und wieviel\n
        Punkte bekommt. Ganz oben setehen die\n
        Begegnungen der Mannschaften und gleich\n
        darunter das ergebnis. In der 3. Zeile\n
        sieht man wie die Tipptendenz ist S-ieg,\n
        U-nentschieden oder N-iederlage.\n\n
    </string>
    <string name="anleitung_label6">Menü Hilfe</string>
    <string name="anleitung_text6">\n
        Sollte irgendwas mal nicht mit der Tippeingabe\n
        klappen, oder sonstige Probleme beim Spiel sein\n
        steht hier eine Mail Adresse und eine\n
        Telefonnummer von John, wo ihr dann die\n
        Tipps hinschicken könnt und natürlich auch\n
        die Beschreibung von den Fehler.\n\n
    </string>
    <string name="anleitung_label7">Menü Einstellungen</string>
    <string name="anleitung_text7">\n
        Benachrichtigungen einschalten, um zum\n
        Spieltag eine Push Nachricht zu bekommen.\n
        Die Nachricht kommt gegen 10 Uhr\n
        Ihr könnt noch einstellen, ob Ton,vibration\n
        und Licht. Beim Licht könnt ihr euch die\n
        Farbe aussuchen.\n
        Nicht alle Handys können jede Farbe\n
        darstellen.\n\n
    </string>
    <string name="anleitung_label8">Punkte</string>
    <string name="anleitung_text8">\n
        5 Punkte bei einem richtigem Tipp\n
        7 Punkte beim richtigem Tipp mit Joker\n
        3 Punkte bei der richtigen Tipptendenz\n
        2 Punkte bei Remies Tipp\n
        1 Punkt beim richtigem Sieger.\n\n
    </string>
    <!-- /Seite Anleitung -->

    <!-- Recourcen Login -->
    <string name="login_benutzername_title">Benutzername</string>
    <string name="login_benutzername_key">benutzername</string>
    <string name="login_benutzername_default" />
    <string name="login_benutzername_summary">Bitte gib deinen Benutzernamen ein.</string>

    <string name="login_passwort_title">Passwort</string>
    <string name="login_passwort_key">passwort</string>
    <string name="login_passwort_default" />
    <string name="login_passwort_summary">Bitte gib dein Passwort ein.</string>

    <string name="login_www_webseite">Webseite</string>
    <string name="login_www_homepage">Homepage</string>
    <!-- /Recourcen Login -->

    <!-- Recourcen Einstellungen -->
    <string name="einstellungen_benachrichtigung_title">Benachrichtigungen</string>
    <string name="einstellungen_benachrichtigung_key">benachrichtigung</string>
    <string name="einstellungen_benachrichtigung_summary">möchtest du eine Benachrichtigung\nvor dem Anpfiff bekommen.</string>
    <string name="einstellungen_benachrichtigung_ton_title">Ton</string>
    <string name="einstellungen_benachrichtigung_ton_key">benachrichtigungton</string>
    <string name="einstellungen_benachrichtigung_ton_summary">Soll die Benachrichtigung Akustisch erfolgen</string>
    <string name="einstellungen_benachrichtigung_led_title">LED</string>
    <string name="einstellungen_benachrichtigung_led_key">benachrichtigungsled</string>
    <string name="einstellungen_benachrichtigung_led_summary">Soll die LED bei der benachrichtigung blinken.</string>
    <string name="einstellungen_benachrichtigung_vib_title">Vibration</string>
    <string name="einstellungen_benachrichtigung_vib_key">benachrichtigungsvib</string>
    <string name="einstellungen_benachrichtigung_vib_summary">Soll das Telefon Vibrieren bei einer benachrichtigung.</string>

    <string name="einstellungen_benachrichtigung_farbe_title">LED Farbe</string>
    <string name="einstellungen_benachrichtigung_farbe_key">benachrichtigungfarbe</string>
    <string name="einstellungen_benachrichtigung_farbe_summary">In welcher Farbe soll die LED blinken.\nNicht alle Handys können alle Farben darstellen.</string>
    <string name="einstellungen_benachrichtigung_farbe_dialog">Bitte Farbe auswählen.</string>
    <array name="einstellungen_benachrichtigung_farbe">
        <item>Blau</item>
        <item>Cyan</item>
        <item>Rot</item>
        <item>Grün</item>
        <item>Weiß</item>
        <item>Magenta</item>
        <item>Gelb</item>
    </array>

    <array name="einstellungen_benachrichtigung_farbe_value">
        <item>BLUE</item>
        <item>CYAN</item>
        <item>RED</item>
        <item>GREEN</item>
        <item>WHITE</item>
        <item>MAGENTA</item>
        <item>YELLOW</item>
    </array>
    <!-- /Recourcen Einstellungen -->

    <string name="nichtangemeldet">nicht angemeldet</string>
    
    
    <!-- Keys-->
    <string name="NOTIFICATION_ID_KEY">noticicationKey</string>
    <!-- /Keys-->
</resources>
