<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_tipps"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_tipps" />
        <item
            android:id="@+id/nav_tabelle"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_tabelle" />
        <item
            android:id="@+id/nav_ubersicht"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_ubersicht" />
        <item
            android:visible="false"
            android:id="@+id/nav_admin"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_admin" />
    </group>

    <item android:title="@string/nav_support">
        <menu>
            <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_anleitung"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_anleitung" />
            <item
                android:id="@+id/nav_hilfe"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_hilfe" />
            </group>
        </menu>
    </item>

</menu>
