<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/einstellungen_benachrichtigung_title">

        <CheckBoxPreference
            android:key="@string/einstellungen_benachrichtigung_key"
            android:title="@string/einstellungen_benachrichtigung_title"
            android:defaultValue="false"
            android:summary="@string/einstellungen_benachrichtigung_summary" />

        <CheckBoxPreference
            android:key="@string/einstellungen_benachrichtigung_ton_key"
            android:dependency="@string/einstellungen_benachrichtigung_key"
            android:layout="?android:attr/preferenceLayoutChild"
            android:title="@string/einstellungen_benachrichtigung_ton_title"
            android:summary="@string/einstellungen_benachrichtigung_ton_summary"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="@string/einstellungen_benachrichtigung_led_key"
            android:dependency="@string/einstellungen_benachrichtigung_key"
            android:layout="?android:attr/preferenceLayoutChild"
            android:title="@string/einstellungen_benachrichtigung_led_title"
            android:summary="@string/einstellungen_benachrichtigung_led_summary"
            android:defaultValue="false" />

        <ListPreference
            android:defaultValue="CYAN"
            android:key="@string/einstellungen_benachrichtigung_farbe_key"
            android:dependency="@string/einstellungen_benachrichtigung_led_key"
            android:title="@string/einstellungen_benachrichtigung_farbe_title"
            android:summary="@string/einstellungen_benachrichtigung_farbe_summary"
            android:entries="@array/einstellungen_benachrichtigung_farbe"
            android:entryValues="@array/einstellungen_benachrichtigung_farbe_value"
            android:dialogTitle="@string/einstellungen_benachrichtigung_farbe_dialog" />

    </PreferenceCategory>
<!--
    <PreferenceCategory
        android:title="dialog_based_preferences">

        <EditTextPreference
            android:key="edittext_preference"
            android:title="title_edittext_preference"
            android:summary="summary_edittext_preference"
            android:dialogTitle="dialog_title_edittext_preference" />

        <ListPreference
            android:key="list_preference"
            android:title="title_list_preference"
            android:summary="summary_list_preference"
            android:entries="@array/entries_list_preference"
            android:entryValues="@array/entryvalues_list_preference"
            android:dialogTitle="dialog_title_list_preference" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="launch_preferences">


        <PreferenceScreen
            android:key="screen_preference"
            android:title="title_screen_preference"
            android:summary="summary_screen_preference">



            <CheckBoxPreference
                android:key="next_screen_checkbox_preference"
                android:title="title_next_screen_toggle_preference"
                android:summary="summary_next_screen_toggle_preference" />

        </PreferenceScreen>

        <PreferenceScreen
            android:title="title_intent_preference"
            android:summary="summary_intent_preference">

            <intent android:action="android.intent.action.VIEW"
                android:data="http://www.android.com" />

        </PreferenceScreen>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="preference_attributes">

        <CheckBoxPreference
            android:key="parent_checkbox_preference"
            android:title="title_parent_preference"
            android:summary="summary_parent_preference" />

        <CheckBoxPreference
            android:key="child_checkbox_preference"
            android:dependency="parent_checkbox_preference"
            android:layout="?android:attr/preferenceLayoutChild"
            android:title="title_child_preference"
            android:summary="summary_child_preference" />

    </PreferenceCategory>
-->
</PreferenceScreen>